plugins/opensearch-iouring/dist/native/include/opensearch_iouring.h

/* ============================================================================
 * Ring Management
 * ============================================================================ */

/**
 * Opaque ring handle.
 */
typedef struct osur_ring osur_ring_t;
/**
 * Get the queue depth of a ring.
 *
 * @param ring The ring
 * @return Queue depth
 */
uint32_t osur_ring_queue_depth(osur_ring_t* ring);
/**
 * Get the number of pending submissions (not yet submitted to kernel).
 *
 * @param ring The ring
 * @return Number of pending SQEs
 */
uint32_t osur_ring_pending(osur_ring_t* ring);
/* ============================================================================
 * File Registration (Optional Optimization)
 *
 * Registering file descriptors allows the kernel to avoid per-operation
 * fd lookup overhead. Beneficial when repeatedly accessing the same files.
 * ============================================================================ */

/**
 * Register file descriptors for optimized access.
 *
 * After registration, use osur_submit_read_registered() with the index
 * returned by this function instead of the raw fd.
 *
 * @param ring  The ring
 * @param fds   Array of file descriptors to register
 * @param count Number of file descriptors
 * @return 0 on success, negative error code on failure
 */
int osur_register_files(osur_ring_t* ring, const int* fds, uint32_t count);
/**
 * Update a registered file descriptor.
 *
 * @param ring  The ring
 * @param index Index of the file to update
 * @param fd    New file descriptor (-1 to unregister this slot)
 * @return 0 on success, negative error code on failure
 */
int osur_update_registered_file(osur_ring_t* ring, uint32_t index, int fd);
/**
 * Unregister all file descriptors.
 *
 * @param ring The ring
 * @return 0 on success, negative error code on failure
 */
int osur_unregister_files(osur_ring_t* ring);
/* ============================================================================
 * Buffer Registration (Optional Optimization)
 *
 * Registering buffers allows the kernel to avoid per-operation buffer
 * mapping overhead. Beneficial for frequently reused buffers.
 * ============================================================================ */

/**
 * Buffer descriptor for registration.
 */
typedef struct {
    void*  base;   /* Buffer base address */
    size_t length; /* Buffer length */
} osur_buffer_t;
/**
 * Register buffers for optimized access.
 *
 * @param ring    The ring
 * @param buffers Array of buffer descriptors
 * @param count   Number of buffers
 * @return 0 on success, negative error code on failure
 */
int osur_register_buffers(osur_ring_t* ring, const osur_buffer_t* buffers, uint32_t count);
/**
 * Unregister all buffers.
 *
 * @param ring The ring
 * @return 0 on success, negative error code on failure
 */
int osur_unregister_buffers(osur_ring_t* ring);