plugins/opensearch-iouring/src/main/generated/org/opensearch/index/store/iouring/ffi/opensearch_iouring_h.java


    /**
     * {@snippet lang=c :
     * uint32_t osur_ring_queue_depth(osur_ring_t *ring)
     * }
     */
    public static int osur_ring_queue_depth(MemorySegment ring) {
        var mh$ = osur_ring_queue_depth.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_ring_queue_depth", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_ring_pending {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_ring_pending");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * uint32_t osur_ring_pending(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_ring_pending$descriptor() {
        return osur_ring_pending.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * uint32_t osur_ring_pending(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_ring_pending$handle() {
        return osur_ring_pending.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * uint32_t osur_ring_pending(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_ring_pending$address() {
        return osur_ring_pending.ADDR;
    }

    /**
     * {@snippet lang=c :
     * uint32_t osur_ring_pending(osur_ring_t *ring)
     * }
     */
    public static int osur_ring_pending(MemorySegment ring) {
        var mh$ = osur_ring_pending.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_ring_pending", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_register_files {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_register_files");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_register_files(osur_ring_t *ring, const int *fds, uint32_t count)
     * }
     */
    public static FunctionDescriptor osur_register_files$descriptor() {
        return osur_register_files.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_register_files(osur_ring_t *ring, const int *fds, uint32_t count)
     * }
     */
    public static MethodHandle osur_register_files$handle() {
        return osur_register_files.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_register_files(osur_ring_t *ring, const int *fds, uint32_t count)
     * }
     */
    public static MemorySegment osur_register_files$address() {
        return osur_register_files.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_register_files(osur_ring_t *ring, const int *fds, uint32_t count)
     * }
     */
    public static int osur_register_files(MemorySegment ring, MemorySegment fds, int count) {
        var mh$ = osur_register_files.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_register_files", ring, fds, count);
            }
            return (int)mh$.invokeExact(ring, fds, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_update_registered_file {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_update_registered_file");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_update_registered_file(osur_ring_t *ring, uint32_t index, int fd)
     * }
     */
    public static FunctionDescriptor osur_update_registered_file$descriptor() {
        return osur_update_registered_file.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_update_registered_file(osur_ring_t *ring, uint32_t index, int fd)
     * }
     */
    public static MethodHandle osur_update_registered_file$handle() {
        return osur_update_registered_file.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_update_registered_file(osur_ring_t *ring, uint32_t index, int fd)
     * }
     */
    public static MemorySegment osur_update_registered_file$address() {
        return osur_update_registered_file.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_update_registered_file(osur_ring_t *ring, uint32_t index, int fd)
     * }
     */
    public static int osur_update_registered_file(MemorySegment ring, int index, int fd) {
        var mh$ = osur_update_registered_file.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_update_registered_file", ring, index, fd);
            }
            return (int)mh$.invokeExact(ring, index, fd);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_unregister_files {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_unregister_files");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_unregister_files(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_unregister_files$descriptor() {
        return osur_unregister_files.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_unregister_files(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_unregister_files$handle() {
        return osur_unregister_files.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_unregister_files(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_unregister_files$address() {
        return osur_unregister_files.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_unregister_files(osur_ring_t *ring)
     * }
     */
    public static int osur_unregister_files(MemorySegment ring) {
        var mh$ = osur_unregister_files.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_unregister_files", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_register_buffers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_POINTER,
            opensearch_iouring_h.C_INT
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_register_buffers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_register_buffers(osur_ring_t *ring, const osur_buffer_t *buffers, uint32_t count)
     * }
     */
    public static FunctionDescriptor osur_register_buffers$descriptor() {
        return osur_register_buffers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_register_buffers(osur_ring_t *ring, const osur_buffer_t *buffers, uint32_t count)
     * }
     */
    public static MethodHandle osur_register_buffers$handle() {
        return osur_register_buffers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_register_buffers(osur_ring_t *ring, const osur_buffer_t *buffers, uint32_t count)
     * }
     */
    public static MemorySegment osur_register_buffers$address() {
        return osur_register_buffers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_register_buffers(osur_ring_t *ring, const osur_buffer_t *buffers, uint32_t count)
     * }
     */
    public static int osur_register_buffers(MemorySegment ring, MemorySegment buffers, int count) {
        var mh$ = osur_register_buffers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_register_buffers", ring, buffers, count);
            }
            return (int)mh$.invokeExact(ring, buffers, count);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class osur_unregister_buffers {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            opensearch_iouring_h.C_INT,
            opensearch_iouring_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("osur_unregister_buffers");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * int osur_unregister_buffers(osur_ring_t *ring)
     * }
     */
    public static FunctionDescriptor osur_unregister_buffers$descriptor() {
        return osur_unregister_buffers.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * int osur_unregister_buffers(osur_ring_t *ring)
     * }
     */
    public static MethodHandle osur_unregister_buffers$handle() {
        return osur_unregister_buffers.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * int osur_unregister_buffers(osur_ring_t *ring)
     * }
     */
    public static MemorySegment osur_unregister_buffers$address() {
        return osur_unregister_buffers.ADDR;
    }

    /**
     * {@snippet lang=c :
     * int osur_unregister_buffers(osur_ring_t *ring)
     * }
     */
    public static int osur_unregister_buffers(MemorySegment ring) {
        var mh$ = osur_unregister_buffers.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("osur_unregister_buffers", ring);
            }
            return (int)mh$.invokeExact(ring);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }
